<resources>
    <string name="app_name">EterationShoppingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="logout">Logout</string>
    <string name="sort_by">Sort By</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="text_filter">Filter</string>
    <string name="no_data_available">No data available</string>
    <string name="no_data_basket">There are no items in your cart, let\'s buy something!</string>
    <string name="txt_brand">Brand</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="finish">Finish</string>
    <string name="price">Price:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search">Search</string>
    <string name="save_image">Save Image</string>
    <string name="purchase_history">Purchase History</string>
    <string name="show_purchase_history">Show Purchase History</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="products">Products</string>
    <string name="basket">Basket</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="finish_shopping_message">Congratulations, your purchase has been made</string>
    <string name="onboarding_message_1">You can list, search and sort all products on a single screen.</string>
    <string name="onboarding_message_2">You can put your products in the cart and determine the quantity.</string>
    <string name="onboarding_message_3">You can favorite your products, so they will continue to appear here even if the application is closed.</string>
    <string name="onboarding_message_4">You can change your profile picture and see your past expenses.</string>
    <string name="total_amount_spent">Total Amount Spent %.2f TL</string>
    <string name="profile_picture_saved">Profile picture saved: %1$s</string>
    <string name="profile_picture_not_saved">Profile picture not saved</string>
</resources>